--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,12 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ProjectName</title>
-    
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>ProjectName</title>
+        <link href="assets/css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <script src="script.js"></script>
+    </body>
 </html>
